--- a/app/src/main/res/layout/activity_pedidos.xml
+++ b/app/src/main/res/layout/activity_pedidos.xml
@@ -1,16 +1,29 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/restaurant_gradient_background"
     tools:context=".views.pedidoscreen.PedidosActivityAdmin">
+
+  <View
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:background="@drawable/overlay_gradient"
+      android:alpha="0.7"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"/>
 
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rvPedidos"
       android:layout_width="0dp"
-      android:layout_marginTop="90dp"
+      android:layout_marginTop="100dp"
       android:layout_height="0dp"
+      android:contentDescription="ITEMS DE PEDIDOS"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
